tests/wordpress/fail/plugins/flexible-custom-post-type/custom-post-type.php
<?php
/*
  Plugin Name: Flexible Custom Post Type
  Description: Admin panel for creating custom post types and custom taxonomies in WordPress
  Author: Fractalia - Applications lab
  Version: 0.1.6
  Author URI: http://fractalia.pe
  Tags: fractalia, wordpress, custom, plugin, post type, taxonomy
 *
 * License: GNU General Public License, v2 (or newer)
 * License URI:  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * 
 * Thanks to http://randyjensenonline.com/thoughts/wordpress-custom-post-type-fugue-icons/ for the icon pack.
 */
